Change home text, align vertical, fix image in firefox

--- a/app/javascript/app/components/home/ndc-pledge/ndc-pledge-styles.scss
+++ b/app/javascript/app/components/home/ndc-pledge/ndc-pledge-styles.scss
@@ -33,14 +33,14 @@
     height: 400px;
 
     @media #{$tablet-landscape} {
-      height: fill-available;
+      height: stretch;
       max-width: 48%;
       padding-bottom: 0;
     }
   }
 
   .ndcTextContainer {
-    padding-left: $gutter-padding;
+    padding: 0 0 $gutter-padding $gutter-padding;
     display: flex;
     flex-direction: column;
     height: auto;
