--- a/app/javascript/app/pages/home/home-styles.scss
+++ b/app/javascript/app/pages/home/home-styles.scss
@@ -2,11 +2,9 @@
 @import '~styles/layout.scss';
 
 .section {
-  padding-top: $gutter-padding;
-  padding-bottom: $gutter-padding * 2;
+  padding: $gutter-padding * 2 0;
 
   @media #{$tablet-landscape} {
-    padding-top: $gutter-padding * 2;
     padding-bottom: 0;
   }
 
@@ -21,6 +19,12 @@
   }
 }
 
+.verticalCenterText {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .introTextContainer {
   @include columns();
 
@@ -29,13 +33,8 @@
     @include column-offset(2);
   }
 
-  padding-top: $gutter-padding;
   flex-wrap: nowrap;
   position: relative;
-
-  @media #{$tablet-landscape} {
-    padding-top: 120px;
-  }
 }
 
 .introText {
